# ruCheckers

./: .clang-format  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  README.md  main.c
src/: clock.c  clock.h  lobby.c  lobby.h  main.c  state.c  state.h
src/st/: game.c  lobbies.c  menu.c
